Correct vertical alignment of success header, Refs. #341

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -1876,7 +1876,7 @@ input.machine {
     background-repeat: no-repeat;
     width: 80px;
     padding: 3px 3px 3px 8px;
-    margin-top: -3px;
+    margin-top: -6px;
     font-size: 90% !important;
     margin-left: -11px;
 }
